# Examples — each is a standalone executable linking against spectra

function(add_spectra_example name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE spectra)
    target_compile_features(${name} PRIVATE cxx_std_20)
endfunction()

add_spectra_example(basic_line)
add_spectra_example(live_stream)
add_spectra_example(animated_scatter)
add_spectra_example(multi_subplot)
add_spectra_example(multi_figure_demo)
add_spectra_example(multi_window_tabs_demo)
add_spectra_example(offscreen_export)
add_spectra_example(video_record)
add_spectra_example(window_resize_test)
add_spectra_example(logger_example)
add_spectra_example(test_menubar)
add_spectra_example(plot_styles_demo)
add_spectra_example(timeline_curve_demo)
add_spectra_example(advanced_animation_demo)
add_spectra_example(shortcut_usage_demo)
add_spectra_example(shortcut_config_demo)
add_spectra_example(plugin_api_demo)
add_spectra_example(timeline_animation_demo)
add_spectra_example(easy_api_demo)
add_spectra_example(easy_realtime_demo)
add_spectra_example(axes_menu_demo)
add_spectra_example(legend_panel_test)
add_spectra_example(empty_launch_csv)

if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/knob_demo.cpp)
    add_spectra_example(knob_demo)
endif()

# 3D examples (conditional on 3D infrastructure being available)
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/simple_3d_scatter.cpp)
    add_spectra_example(simple_3d_scatter)
    add_spectra_example(surface_3d)
    add_spectra_example(parametric_3d_line)
    add_spectra_example(demo_3d)
    add_spectra_example(axes3d_demo)
    add_spectra_example(camera_animation_3d)
    add_spectra_example(camera_animator_demo)
    add_spectra_example(mind_blowing_3d)
    add_spectra_example(lit_surface_demo)
    add_spectra_example(transparency_demo)
    add_spectra_example(mode_transition_demo)
endif()

# Multi-window demo (conditional — scaffolding available before full multi-window)
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/multi_window_demo.cpp)
    add_spectra_example(multi_window_demo)
endif()
