[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra-mcp-server"
version = "0.1.0"
description = "MCP server for remote-controlling Spectra via automation socket"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
spectra-mcp = "spectra_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spectra_mcp*"]
