[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra-plot"
dynamic = ["version"]
description = "GPU-accelerated scientific plotting via IPC"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
dev = ["pytest>=7.0", "numpy>=1.20"]

[tool.setuptools.dynamic]
version = {file = "../version.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["spectra*"]
